--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "rest-api",
   "version": "1.0.0",
   "description": "A small RESTful API with JWT authentication mainly built with Node.js, Express and Mongoose.",
-  "main": "index.ts",
+  "main": "server.ts",
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "nodemon dist/index.js --watch dist/",
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,17 +18,18 @@
   },
   "homepage": "https://github.com/felpshn/rest-api#readme",
   "dependencies": {
-    "bcrypt": "^5.0.0",
-    "dotenv": "^8.2.0",
+    "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.16",
-    "yup": "^0.32.8"
+    "mongoose": "^5.12.11",
+    "typescript": "^4.2.4",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
-    "@types/express": "^4.17.11",
-    "@types/jsonwebtoken": "^8.5.0",
-    "nodemon": "^2.0.7"
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.12",
+    "@types/jsonwebtoken": "^8.5.1",
+    "ts-node-dev": "^1.1.6"
   }
 }
